--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <!-- Insert Adobe Font css here -->
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wyz5rzq.css">
     <title>Market Monkey Home Page</title>
 </head>
 
@@ -13,7 +14,7 @@
 
         <section class="navbar">
             <div class="logo">
-                <img src="logo-only.png"> <h1>MonkeyMarket</h1>
+                <img src="icon.png"> <h1>MonkeyMarket</h1>
             </div>
 
             <nav>
@@ -25,11 +26,20 @@
             </nav>
         </section> <!-- end of navbar div-->
 
+        <section class="main-body">
+                    <p>Sample Text:</p>
+                    <input type="text">
 
-        <section class="footer">
-            <h3>What is MonkeyMarket?</h3>
-            <p>MonkeyMarket aims to test the wildest financial hypothesis ever devised:<br>Could a bunch of monkeys beat Wall Street?</p>
+                    <p>Sample Text 2:</p>
+                    <input type="text">
         </section>
+
+        <footer class="footer">
+            <div class="footer-text">
+                <h3>What is MonkeyMarket?</h3>
+                <p>MonkeyMarket aims to test the wildest financial hypothesis ever devised: Could a bunch of monkeys beat Wall Street?</p>
+            </div>
+        </footer>
 
 
 
