--- a/index.html
+++ b/index.html
@@ -30,20 +30,51 @@
         <section class="main-body"> <!-- Beginning of main-body div, main content goes here! -->
             <h2>Sit back, and let the monkeys pick your stocks.</h2>
 
-            <p>How many stocks will the monkeys pick?</p>
+            <p>How much money do you want to add to the monkey portfolio?</p>
             <input type="text">
 
             <p>Which index fund is competing with the monkeys?</p>
 
             <div class="custom-select"> <!-- Select an index fund -->
-                <select name="fund">
-                    <option value="">Vanguard 500 Index Investor Share Class (VFINX)</option>
-                    <option value="">Fidelity 500 Index Fund (FXAIX)</option>
-                    <option value="">Schwab S&P 500 Index Fund (SWPPX)</option>
-                    <option value="">iShares S&P 500 Index Fund (BSPAX)</option>
-                    <option value="">T. Rowe Price Equity Index 500 Fund (PREIX)</option>
-                </select>
-            </div>
+
+                    <div class="checkbox-option">
+                        <input type="checkbox">
+                        <label><p>Vanguard 500 Index Investor Share Class (VFINX)</p></label>
+                        </input>
+                    </div>
+
+
+                    <div class="checkbox-option">
+                        <input type="checkbox" class="input-checkbox">
+                        <label><p>Fidelity 500 Index Fund (FXAIX)</p></label>
+                        </input>
+                    </div>
+
+                    <div class="checkbox-option">
+                        <input type="checkbox" class="input-checkbox">
+                        <label><p>Schwab S&P 500 Index Fund (SWPPX)</p></label>
+                        </input>
+                    </div>
+
+                    <div class="checkbox-option">
+                        <input type="checkbox" class="input-checkbox">
+                        <label><p>iShares S&P 500 Index Fund (BSPAX)</p></label>
+                        </input>
+
+                    </div><div class="checkbox-option">
+                        <input type="checkbox" class="input-checkbox">
+                    <label><p>T. Rowe Price Equity Index 500 Fund (PREIX)</p></label>
+                        </input>
+                    </div>
+
+
+                    <div class="checkbox-option">
+                        <input type="checkbox" class="input-checkbox">
+                        <label><p>ALL of the funds!</p></label>
+                        </input>
+                    </div>
+
+            </div> <!-- End of selecting index fund div -->
 
             <button class="custom-button">Release the monkeys!</button> <!-- runs the program -->
         </section> <!-- End of main-body section -->
