Landing page finished
Styling for the landing page is finished

TO-DO:
Format index.html into a results screen

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <nav>
                 <ul>
                     <li>Our Mission</li>
-                    <li>The (code) Monkeys</li>
-                    <li>How it works</li>
+                    <li>About us</li>
                 </ul>
             </nav>
         </section> <!-- end of navbar div-->
@@ -31,7 +30,7 @@
             <h2>Sit back, and let the monkeys pick your stocks.</h2>
 
             <p>How much money do you want to add to the monkey portfolio?</p>
-            <input type="text">
+            <input type="text" placeholder="Insert investment amount (in dollars)">
 
             <p>Which index fund is competing with the monkeys?</p>
 
