Results page made
Results screen made

TO-DO:
Make the file one page after adding in Jscript
Change colors of text in Jscript based on positive or negative values

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
         <footer class="footer">
             <div class="footer-text">
-                <h3>What is MonkeyMarket?</h3>
-                <p>MonkeyMarket aims to test the wildest financial hypothesis ever created: Could a bunch of monkeys beat Wall Street?</p>
+                <h3>"A blindfolded monkey throwing darts at a newspaper's financial pages could select a portfolio that would do just as well as one carefully selected by experts."</h3>
+                <p>- Burton Malkiel<br><span id="quote">Princeton University Economics Professor</span></p>
             </div>
         </footer>
 
