--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Normalizes CSS Styling across browsers -->
     <link rel="stylesheet" href="normalize.css">
+
+    <!-- Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/wyz5rzq.css">
+
+    <script type="text/javascript" src="styling.js"></script>
     <title>Market Monkey Home Page</title>
 </head>
 
