--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             </div> <!-- End of selecting index fund div -->
 
-            <button  onclick="getPrice()" class="custom-button">Release the monkeys!</button> <!-- runs the program -->
+            <button  onclick="generateStocks()" class="custom-button">Release the monkeys!</button> <!-- runs the program -->
         </section> <!-- End of main-body section -->
 
         <footer class="footer">
