--- a/results.html
+++ b/results.html
@@ -21,13 +21,13 @@
 
     <section class="navbar">
         <div class="logo">
-            <img src="icon.png"> <h1>MonkeyMarket</h1>
+            <img src="icon.png"><h1><a href="#">MonkeyMarket</a></h1>
         </div>
 
         <nav>
             <ul>
-                <li>Our Mission</li>
-                <li>About us</li>
+                <li><a href="#">Our Mission</a></li>
+                <li><a href="about.html">About us</a></li>
             </ul>
         </nav>
     </section> <!-- end of navbar div-->
