Final Front end push
now to just get it all working!

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
         <nav>
             <ul>
-                <li><a href="#">Our Mission</a></li>
+                <li><a href="mission.html">Our Mission</a></li>
                 <li><a href="about.html">About us</a></li>
             </ul>
         </nav>
@@ -33,6 +33,7 @@
 
 
     <section class="about-body"> <!-- Beginning of main-body div, main content goes here! -->
+        <h2>Meet the Code Monkeys!</h2>
         <div class="flex-card"> <!-- Flex card div for bios -->
             <img src="ren.png">
             <h3>Ren Blanding</h3>
