--- a/mission.html
+++ b/mission.html
@@ -25,7 +25,7 @@
 
         <nav>
             <ul>
-                <li><a href="#">Our Mission</a></li>
+                <li><a href="mission.html">Our Mission</a></li>
                 <li><a href="about.html">About us</a></li>
             </ul>
         </nav>
@@ -33,35 +33,13 @@
 
 
     <section class="about-body"> <!-- Beginning of main-body div, main content goes here! -->
-        <div class="flex-card"> <!-- Flex card div for bios -->
-            <img src="ren.png">
-            <h3>Ren Blanding</h3>
-            <div class="bio-txt"> <!-- bio text div -->
-                <p>
-                    <span class="bold-card">Major:</span> Graphic Communication
-                </p>
-                <p>
-                    <span class="bold-card">4th Year</span>
-                </p>
-                <p>Rocklin, CA</p>
-                <p>UI designer, CSS curator, Crazy idea generator.</p>
-            </div> <!-- end of bio text div -->
-        </div> <!-- end of flex card div -->
+        <h2>Our Mission</h2>
+        <div class="mission-txt"> <!-- Flex card div for bios -->
+            <h3>If an infinite number of monkeys were to type on an infinite number of typewriters, how long would it take for one of them to write Hamlet?</h3>
+            <p>At MarketMonkey, we believe that monkeys are smarter than you think. That's why we hired them to pick stocks for us. No, really. Economics professors have said for decades that humans picking stocks was a process wrought with failure, that something as crazy as training monkeys to throw darts at a list of stock indexes would be more fruitful than letting our supposedly superior brains pick stocks. Here in San Luis Obispo, it's very difficult and borderline unethical to put monkeys up to the task, so our code monkeys came up with the next best thing: RNG. Our stock picking process simulates the apes that aggregate the stocks that will net you the big bucks, and we'll prove it too, by pitting it alongside the best index funds that the financial experts from Wall Street could muster. All of this, so we could put the "wildest" stock market theory to the test.</p>
+        </div> <!-- end of mission text div -->
 
-        <div class="flex-card"> <!-- Flex card div for bios -->
-            <img src="ryan.png">
-            <h3>Ryan Premi</h3>
-            <div class="bio-txt"> <!-- bio text div -->
-                <p>
-                    <span class="bold-card">Major:</span> Computer Science
-                </p>
-                <p>
-                    <span class="bold-card">3rd Year</span>
-                </p>
-                <p>Portland, OR</p>
-                <p>Web Developer, API key borrower, "couldn't be me"-er</p>
-            </div> <!-- end of bio text div -->
-        </div> <!-- end of flex card div -->
+        <img class="mission-img" src="stonks.png">
 
     </section> <!-- End of main-body section -->
 
