--- a/results.html
+++ b/results.html
@@ -26,7 +26,7 @@
 
         <nav>
             <ul>
-                <li><a href="#">Our Mission</a></li>
+                <li><a href="mission.html">Our Mission</a></li>
                 <li><a href="about.html">About us</a></li>
             </ul>
         </nav>
