ready to merge with master

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <script type="text/javascript" src="styling.js"></script>
      <script type="text/javascript" src="index.js"></script>
+     <script type ="text/javascript" src="tost.js"></script>
 
     <title>Market Monkey Home Page</title>
 </head>
@@ -83,7 +84,7 @@
 
             </div> <!-- End of selecting index fund div -->
 
-            <button  onclick="generateStocks()" class="custom-button">Release the monkeys!</button> <!-- runs the program -->
+            <button  onclick="decideStocks()" class="custom-button">Release the monkeys!</button> <!-- runs the program -->
         </section> <!-- End of main-body section -->
 
         <footer class="footer">
