--- a/results.html
+++ b/results.html
@@ -33,7 +33,7 @@
     </section> <!-- end of navbar div-->
 
 
-    <section class="results-grid"> <!-- Beginning of main-body div, main content goes here! -->
+    <section style="display: hide" class="results-grid"> <!-- Beginning of main-body div, main content goes here! -->
             <div class="results-header-h2"> <!-- Results Header div-->
                 <h2>Results</h2>
             </div> <!-- End of Results header div -->
