--- a/index.html
+++ b/index.html
@@ -45,47 +45,108 @@
 
             <div class="custom-select"> <!-- Select an index fund -->
 
+
+
+
+
                     <div class="checkbox-option">
-                        <input type="checkbox">
+                        <input id="vanguard" type="checkbox">
                         <label><p>Vanguard 500 Index Investor Share Class (VFINX)</p></label>
                         </input>
                     </div>
 
 
                     <div class="checkbox-option">
-                        <input type="checkbox" class="input-checkbox">
+                        <input id="fidelity" type="checkbox" class="input-checkbox">
                         <label><p>Fidelity 500 Index Fund (FXAIX)</p></label>
                         </input>
                     </div>
 
                     <div class="checkbox-option">
-                        <input type="checkbox" class="input-checkbox">
+                        <input id ="schwab" type="checkbox" class="input-checkbox">
                         <label><p>Schwab S&P 500 Index Fund (SWPPX)</p></label>
                         </input>
                     </div>
 
                     <div class="checkbox-option">
-                        <input type="checkbox" class="input-checkbox">
+                        <input id="iShares" type="checkbox" class="input-checkbox">
                         <label><p>iShares S&P 500 Index Fund (BSPAX)</p></label>
                         </input>
 
                     </div><div class="checkbox-option">
-                        <input type="checkbox" class="input-checkbox">
+                        <input id="Rowe" type="checkbox" class="input-checkbox">
                     <label><p>T. Rowe Price Equity Index 500 Fund (PREIX)</p></label>
                         </input>
                     </div>
 
 
                     <div class="checkbox-option">
-                        <input type="checkbox" class="input-checkbox">
+                        <input id ="mean"type="checkbox" class="input-checkbox">
                         <label><p>ALL of the funds!</p></label>
                         </input>
                     </div>
 
             </div> <!-- End of selecting index fund div -->
 
-            <button  onclick="decideStocks()" class="custom-button">Release the monkeys!</button> <!-- runs the program -->
+            <button  onclick="processInputs()" class="custom-button">Release the monkeys!</button> <!-- runs the program -->
         </section> <!-- End of main-body section -->
+
+ <section id="result" style="visibility: hidden; display: none" class="results-grid"> <!-- Beginning of main-body div, main content goes here! -->
+            <div class="results-header-h2"> <!-- Results Header div-->
+                <h2>Results</h2>
+            </div> <!-- End of Results header div -->
+
+            <div class="results-header-h3"> <!-- How would the monkeys do? -->
+                <h3>How would the Monkeys have done in a year?</h3>
+            </div>
+
+            <div class="result-item1">
+                <h4>Monkey fund price (1-Year)</h4>
+                <p id="monkPrev">$224.81</p>
+            </div>
+
+            <div class="result-item2">
+                <h4>Monkey fund price (Current)</h4>
+                <p id="monkCurr">$249.74</p>
+            </div>
+
+            <div class="result-item3">
+                <h4>Fund Growth (1-Year)</h4>
+                <p id="monkeyPercent">11.08</p>
+            </div>
+
+            <div class="results-header-h3"> <!-- How would the index fund do? -->
+                <h3>How does that compare with the Mean of the top 5 index funds?</h3>
+            </div>
+
+            <div class="result-item1">
+                <h4>Index fund price (1-Year)</h4>
+                <p id="resPrev">$167.36</p>
+            </div>
+
+            <div class="result-item2">
+                <h4>Index fund price (Current)</h4>
+                <p id="resCurr">$170.23</p>
+            </div>
+
+            <div class="result-item3">
+                <h4>Fund Growth (1-Year)</h4>
+                <p id="indexPercent">5.17</p>
+            </div>
+                <br>
+            <div class="fund-results">
+                <p id="resultPercent">Which is better, the monkey or the expert?</p>
+                <p id="resultAppreciation">If you'd invested last year, your investment would've appreciated by </p>
+
+                <p id="Average"></p>
+                  <p style="text-align: center"> Stocks Gathered:</p>
+                <p id ="listOfStocks"></p>
+
+
+
+            </div>
+    </section>
+
 
         <footer class="footer">
             <div class="footer-text">
