Reapplied the fonts chosen for the app during SLO Hacks, with alternate in case Adobe Fonts is down

--- a/results.html
+++ b/results.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="normalize.css">
 
     <!-- Adobe Fonts -->
-    <link rel="stylesheet" href="https://use.typekit.net/wyz5rzq.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ntu4rvs.css">
 
     <script type="text/javascript" src="styling.js">
         window.onload = percentageColor()</script>
